objects/Property_enquiry__c.object
<CustomObject>
    <label>Property enquiry</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Property Enquiery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property enquiries</relationshipLabel>
        <relationshipName>Property_enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>